hide the (now unused) My Account tab - everyone is now using remote authentication against ILS

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -187,7 +187,7 @@ $('document').ready(function(){
   <nav role="navigation" id="pub-nav-primary">
     <ul class="inline-items">
       <li><a id="menu_search" href="/cgi-bin/public.cgi?rm=search_form">Home</a></li>
-      <li><a id="menu_myaccount" href="/cgi-bin/public.cgi?rm=myaccount_form">My Account</a></li>
+      <!-- <li><a id="menu_myaccount" href="/cgi-bin/public.cgi?rm=myaccount_form">My Account</a></li> --> <!-- Unused, now that all authentication is against remote systems -->
       <li><a id="menu_current" href="/cgi-bin/public.cgi?rm=current_form">Current Borrowing</a></li>
       <li><a id="menu_about" href="/cgi-bin/public.cgi?rm=about_form">About</a></li>
       <li><a id="menu_help" href="/cgi-bin/public.cgi?rm=help_form">Help</a></li>
