--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -112,14 +112,14 @@
 <nav role="navigation" id="pub-nav-primary">
   <ul class="inline-items">
     <li><a id="menu_search" href="/cgi-bin/public.cgi?rm=search_form">Home</a></li>
-    <li><a id="menu_myaccount" href="/cgi-bin/public.cgi?rm=myaccount_form">My Account</a></li>
+    <!-- <li><a id="menu_myaccount" href="/cgi-bin/public.cgi?rm=myaccount_form">My Account</a></li> --> <!-- Unused, now that all authentication is against remote systems -->
     <li><a id="menu_current" href="/cgi-bin/public.cgi?rm=current_form">Current Borrowing</a></li>
     <li><a id="menu_about" href="/cgi-bin/public.cgi?rm=about_form">About</a></li>
     <li><a id="menu_help" href="/cgi-bin/public.cgi?rm=help_form">Help</a></li>
     <li><a id="menu_faq" href="/cgi-bin/public.cgi?rm=faq_form">FAQ</a></li>
     <li><a id="menu_contact" href="/cgi-bin/public.cgi?rm=contact_form">Contact</a></li>
 
-    <li><a id="menu_test" href="/cgi-bin/public.cgi?rm=test_form">Test</a></li>
+    <!-- <li><a id="menu_test" href="/cgi-bin/public.cgi?rm=test_form">Test</a></li> -->
   </ul>
 </nav>
 
