i18n for public footer

--- a/templates/public/footer.tmpl
+++ b/templates/public/footer.tmpl
@@ -3,7 +3,7 @@
 
 <footer role="contentinfo">
 <div id="nav2">
-    <a href="/cgi-bin/public.cgi?rm=environment_form">ENV display</a><span style="color:#aabdba;"> | </span><a id="clearCookies" href="?">DEBUG: clear cookies</a>
+    <a id="envDisplay" href="/cgi-bin/public.cgi?rm=environment_form">ENV display</a><span style="color:#aabdba;"> | </span><a id="clearCookies" href="?">DEBUG: clear cookies</a>
 </div>
   <p>
     <!-- The id="username" div is necessary: the username gets extracted (in 
