--- a/templates/public/environment.tmpl
+++ b/templates/public/environment.tmpl
@@ -1,48 +1,20 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 
-<style type="text/css">
-
-#fill-table {
-  border-collapse: collapse;
-  width: 90%;
-  margin: auto;
-  background: #f3f3f3;
-  border: 2px solid #505050;
-  color: #505050;
-  padding: .5em;
-}
-
-#fill-table td {
-  padding: 1em;
-}
-
-#fill-table th {
-  font-weight: bold;
-  font-size: 1em;
-}
-
-#fill-table td, #fill-table th {
-  border: 1px solid #fff;
-}
-#fill-table tr:first-child th {
-  border-top: 0;
-}
-#fill-table tr:last-child td {
-  border-bottom: 0;
-}
-#fill-table tr td:first-child,
-#fill-table tr th:first-child {
-  border-left: 0;
-}
-#fill-table tr td:last-child,
-#fill-table tr th:last-child {
-  border-right: 0;
-}
-</style>
+<script type="text/javascript">
+  $('document').ready(function(){
+    $("#search-container").hide();
+  });
+</script>
+  
 <!--dev test-->
 <div id="content">
 
   <table id="fill-table">
+    <tr>
+      <td>Your web browser</td>
+      <td><TMPL_VAR NAME="http_user_agent"></td>
+    </tr>
+      
     <tr>
       <td>ENV variable</td>
       <td>Value</td>
@@ -56,6 +28,6 @@
     </TMPL_LOOP>
 
   </table>
-</container>
+</content>
 
 <TMPL_INCLUDE NAME="footer.tmpl">
