i18n login authenticating message

--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -70,7 +70,7 @@
         </fieldset>
 	
       <div id="waitDiv" style="display:none">
-        Authenticating... <img src="/img/wait.gif" alt="loading indicator">
+        <span id="authenticating">Authenticating... </span><img src="/img/wait.gif" alt="loading indicator">
       </div>
 
       </div> <!-- div id extAuth -->
