added Dec 1st 2016 update note

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -95,6 +95,20 @@
       <h2>Updates</h2>
       <hr>
       <div id="accordion">
+	<h3>Thursday 1st December 2016 Release notes</h3>
+	<div>
+	  <p>New features:
+	    <ul>
+	      <li>Bilingual patron site.  Patrons can now switch between English and French interfaces; choice is saved in a cookie, but can be changed at any time. You can use these links:
+		<ul>
+		  <li>English: http://fill.mb.libraries.coop/public/en/</li>
+		  <li>French: http://fill.mb.libraries.coop/public/fr/</li>
+		</ul>
+	      </li>
+	    </ul>
+	  </p>
+	</div>
+	
 	<h3>Tuesday 21st June 2016 Release notes</h3>
 	<div>
 	  <p>New features:
