initial discovery-only UI

--- a/templates/discovery/discovery-only.tmpl
+++ b/templates/discovery/discovery-only.tmpl
@@ -37,6 +37,7 @@
 <script type="text/javascript" src="/js/menu-counters-1.2.js"></script>
 <script type="text/javascript" src="/js/i18n.js" charset="UTF-8"></script>
 <script type="text/javascript" src="/js/public-header-functions-1.0.js"></script>
+<script type="text/javascript" src="/plugins/clipboard.js-master/dist/clipboard.js"></script>
 
 <script type="text/javascript" src="/js/pz2.js"></script>
 <script type="text/javascript" src="/js/fILL_client-discoveryOnly-1.0.js"></script>
