--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -41,6 +41,7 @@
       <li><a href="/Librarian%20-%20How%20to%20handle%20patron%20requests.pdf">How to handle patron requests</a></li>
       <li><a href="/cgi-bin/info.cgi?rm=send_pdf&amp;doc=fILL_brochure.pdf">Manitoba Libraries Conference 2012 fILL brochure (3-fold)</a></li>
       <li><a href="/cgi-bin/info.cgi?rm=send_pdf&amp;doc=Rotations_Manager_guide.pdf">Rotations Manager guide</a></li>
+      <li><a href="/cgi-bin/info.cgi?rm=send_pdf&amp;doc=WPL_literacy_collection.pdf">WPL literacy/ESL collections guide</a></li>
     </ul>
     
     <p><strong>Counting Opinions</strong></p> 	
