framework for training documents and videos

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -6,8 +6,9 @@
   <div id="main-left" class="tone-box" >
 
     <div class="alert-box" >
-      <p>fILL updated!</p>
-      <p>See the completely new Librarian's Guide in the Quick Links, below.</p>
+      <p>fILL training</p>
+      <p>We've added a new main tab: Training</p>
+      <p>This includes existing training documents as well as some brand-new introductory videos for borrowing and lending.</p>
     </div>
     <hr>
     <div id="zserver">
@@ -36,15 +37,9 @@
     </ul>
     
     <p><strong>Library fILL</strong></p>
-    <ul>
-      <li><a href="/cgi-bin/info.cgi?rm=send_pdf&amp;doc=fILL_-_Librarians_Guide_-_2016_June.pdf">fILL Librarian's Guide - 2016 June</a></li>
-      <li><a href="/Librarian%20-%20How%20to%20handle%20patron%20requests.pdf">How to handle patron requests</a></li>
-      <li><a href="/cgi-bin/info.cgi?rm=send_pdf&amp;doc=fILL_brochure.pdf">Manitoba Libraries Conference 2012 fILL brochure (3-fold)</a></li>
-      <li><a href="/cgi-bin/info.cgi?rm=send_pdf&amp;doc=Rotations_Manager_guide.pdf">Rotations Manager guide</a></li>
-      <li><a href="/cgi-bin/info.cgi?rm=send_pdf&amp;doc=WPL_literacy_collection.pdf">WPL literacy/ESL collections guide</a></li>
-    </ul>
+    <p>These documents are now under the <a href="/cgi-bin/training.cgi?rm=training_docs_form"><span style="text-decoration: underline;">Training</span></a> tab.</p>
     
-    <p><strong>Counting Opinions</strong></p> 	
+    <p><strong>Leave fILL and go to Counting Opinions</strong></p> 	
     <ul> 	
       <li><a href="http://mb.countingopinions.com/index.php?page_id=4">Statistics/Ready Reports</a></li> 	
       <li><a href="http://mb.countingopinions.com/memberlist_details.php?l=14702">Addresses, phone numbers, and links to library web sites</a></li> 	
