added a release note about the search results grouping change

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -91,6 +91,13 @@
       <h2>Updates</h2>
       <hr>
       <div id="accordion">
+	<h3>April 24th, 2019 Release notes</h3>
+	<div>
+	  <p>(Much) feedback shows that library staff prefer a broader grouping of titles in search results.  We have updated fILL to return to this (rather than grouping on unique ISBNs).</p>
+	  <p>Thanks for your feedback!</p>
+	</div>
+
+	<!--
 	<h3>Thursday 1st December 2016 Release notes</h3>
 	<div>
 	  <p>New features:
@@ -269,7 +276,7 @@
 	  </ul>
 	  <p>- the fILL development team</p>
 	</div>
-
+-->
       </div><!-- div id accordion -->
     </div><!-- updates -->
     
