--- a/templates/myaccount/settings.tmpl
+++ b/templates/myaccount/settings.tmpl
@@ -1,7 +1,7 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_myaccount.tmpl">
 
-<script type="text/javascript" src="/js/account-settings-1.2.js"></script>
+<script type="text/javascript" src="/js/account-settings-1.3.js"></script>
 
 <script type="text/javascript">
   <!--
@@ -37,6 +37,11 @@
 	    <div>
 	      <label for="website">Web site:</label>
 	      <input id="website" type="text" name="website" value="<TMPL_VAR name=website>" />
+	    </div>
+
+	    <div>
+	      <label for="phone">Phone:</label>
+	      <input id="phone" type="text" name="phone" value="<TMPL_VAR name=phone>" />
 	    </div>
 	  </fieldset>
           <input id="contactButton" type="button" class="library-style" value="Save changes">
