--- a/templates/info/contacts.tmpl
+++ b/templates/info/contacts.tmpl
@@ -16,7 +16,7 @@ $('document').ready(function(){
     "info": true,
     "ordering": true,
     "dom": '<"H"Bfr>t<"F"ip>',
-      buttons: [ 'copy', 'excel', 'pdf', 'print' ],
+    buttons: [ 'copy', 'excel', 'pdf', 'print' ],
     });      
 
 });
@@ -39,8 +39,13 @@ $('document').ready(function(){
 	    
 	    <TMPL_LOOP NAME="libraries">
 	      <tr>
-		<td><TMPL_VAR NAME="org_name"></td>
-		<td><TMPL_VAR NAME="symbol"></td>
+		<TMPL_IF NAME="opt_in">
+  		  <td><TMPL_VAR NAME="org_name"></td>
+		  <td><TMPL_VAR NAME="symbol"></td>
+		<TMPL_ELSE>
+  		  <td><TMPL_VAR NAME="org_name"><br/>Unavailable for ILL</td>
+		  <td class="ill-status-no"><TMPL_VAR NAME="symbol"></td>
+		</TMPL_IF>
 		<td><TMPL_VAR NAME="phone"></td>
 		<td><a href='mailto:<TMPL_VAR NAME="email_address">'><TMPL_VAR NAME="email_address"></a></td>
 		<td>
