--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -6,9 +6,10 @@
   <div id="main-left" class="tone-box" >
 
     <div class="alert-box" >
-      <p>fILL training</p>
-      <p>We've added a new main tab: Training</p>
-      <p>This includes existing training documents as well as some brand-new introductory videos for borrowing and lending.</p>
+      <p>Restarting ILL</p>
+      <p>When your library is ready to restart ILL, contact David Christensen at PLSB.</p>
+      <p>Libraries which have opted-in will be able to interlibrary loan with other libraries which have opted in.</p>
+      <p>See the 3 sections under "Updates" on this page for important information.</p>
     </div>
     <hr>
     <div id="zserver">
@@ -91,13 +92,39 @@
       <h2>Updates</h2>
       <hr>
       <div id="accordion">
+	<h3>When your library is ready to restart interlibrary loan...</h3>
+	<div>
+	  <p>Restarting ILL is voluntary.  No library is required to restart ILL until they are ready, and it will take time before ILL is operational for every library.</p>
+	  <p>When your library is ready to restart ILL, you can opt-in by contacting David Christensen at David.Christensen@gov.mb.ca </p>
+	  <p>Libraries that have opted in to restarting their ILL will be able to search for and request items from other opted-in libraries.  The holdings of libraries which are not yet participating in ILL will not show up in your search results.</p>
+	  <p>Libraries which have not yet opted in can still search, but will not be able to make requests.</p>
+	</div>
+	<h3>Things you'll notice...</h3>
+	<div>
+	  <p>When ILL was suspended there were a number of active, in-process ILL requests.  All of the Borrowing and Lending lists in fILL (e.g. Borrowing > Unfilled or Lending > Respond) will indicate if the library involved is not yet open for ILL by highlighting the library's symbol with a light orange background.</p>
+	  <p>Some actions that you might ordinarily take (e.g. returning a book to a lender) will not be available to you for libraries that are not yet open for ILL.  When the library in question opts in, those actions will be unlocked.  Other actions (e.g. responding “unfilled” to one of these older requests) will be available regardless of the other library's status.</p>
+	  <p>The contact list (Reports > Contacts) will also show each library's status in the same way – highlighting the library's symbol – as well as adding “Unavailable for ILL” under the library's name.</p>
+	</div>
+	<h3>Notes</h3>
+	<div>
+	  <p>Remember that searching only looks at the catalogues of libraries that are available for ILL.  You may want to let your patrons know that a particular item that isn't found right now might become available at a later date, as more libraries restart their ILL services.</p>
+	  <p>Differing loan periods:  Libraries may have made different decisions/policies regarding quarantining incoming material coming from either other libraries or from their own patrons.  Libraries may have reduced ILL staff or reduced hours, but still be willing to process ILLs.</p>
+	  <p>
+	    <ul>
+	      <li>When requesting an interlibrary loan, indicate in the “Additional Notes” field if you would like extra time added to the loan period for your quarantine policy.</li>
+	      <li>When lending, try to be flexible in adjusting your loan periods to accomodate any extra time requested.  Your Respond tab (and pull list) will show any borrower notes to help you make lending decisions.</li>
+	    </ul>
+	  </p>
+
+	</div>
+	
+	<!--
 	<h3>April 24th, 2019 Release notes</h3>
 	<div>
 	  <p>(Much) feedback shows that library staff prefer a broader grouping of titles in search results.  We have updated fILL to return to this (rather than grouping on unique ISBNs).</p>
 	  <p>Thanks for your feedback!</p>
 	</div>
 
-	<!--
 	<h3>Thursday 1st December 2016 Release notes</h3>
 	<div>
 	  <p>New features:
