Opt-in for accepting returns only

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -1,5 +1,5 @@
 <TMPL_INCLUDE NAME="header.tmpl">
-<script type="text/javascript" src="/js/welcome-1.0.js"></script>
+<script type="text/javascript" src="/js/welcome-1.1.js"></script>
 
 <div id="center" role="main">
 
@@ -51,6 +51,11 @@
   </div>
   
   <div id="main-right" class="tone-box" role="complementary">
+    <div id="opt-in-returns-only-div">
+        <input type="checkbox" id="opt-in-returns-only" name="horns">
+	<label for="opt-in-returns-only"><mark>Check this box if your library <strong>willing to accept returns</strong>, even if you are not yet ready to restart ILL.</mark></label>
+    </div>
+    
     <div id="at-a-glance">
       <h2>At a glance</h2>
       <table class="at-a-glance-table">
