dis-ambiguate org.status

--- a/templates/myaccount/settings.tmpl
+++ b/templates/myaccount/settings.tmpl
@@ -61,7 +61,7 @@
 	      </p>
 	      <label for="lib_status">Library's status:</label>
 	      <textarea id="lib_status" name="lib_status" rows="3" cols="40">
-		<TMPL_VAR name=status>
+		<TMPL_VAR name=lib_status>
 	      </textarea>
 	      <p>Enter or change the text of your status note and click the "Save changes" button.</p>
 	      <p>To remove your status note, delete all of the text and click the "Save changes" button.<p>
