library staff accounts maintenance

--- a/templates/admin/header.tmpl
+++ b/templates/admin/header.tmpl
@@ -223,6 +223,7 @@ $('document').ready(function(){
     <li><a id="menu_load_spruce_ill_numbers" href="/cgi-bin/admin.cgi?rm=spruce_ill">Spruce</a></li>
     <li><a id="menu_zserver" href="/cgi-bin/admin.cgi?rm=zserver_test">z39.50</a></li>
     <li><a id="menu_public" href="/cgi-bin/admin.cgi?rm=public_featured">Public</a></li>
+    <li><a id="menu_library" href="/cgi-bin/admin.cgi?rm=library_pw">Library staff accounts</a></li>
   </ul>
 </nav>
 
